--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.1",
     "mocha": "^10.2.0",
     "mongoose": "^7.4.4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-ui-express": "^5.0.0"
   }
 }
